worked on customizing calendar and dropdown menu and need to fix current spacing

--- a/frontend/src/app/components/attendanceList.module.css
+++ b/frontend/src/app/components/attendanceList.module.css
@@ -5,6 +5,7 @@
   background: #ffffff;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .studentRow {
@@ -170,4 +171,15 @@
   font-weight: 400;
   line-height: 20px;
   letter-spacing: -0.28px;
+}
+
+.sessionNotFound {
+  color: var(--Gray-900, #231f20);
+
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: -0.32px;
 }
